--- a/R/Final_Project.html
+++ b/R/Final_Project.html
@@ -364,7 +364,10 @@ Cancer Based on the GEO Database” by Liu et al. (2021), which evaluated
 the expression and prognostic value of the CDC45 gene in cervical
 cancer. For this purpose, the gene expression dataset available in the
 Gene Expression Omnibus (GEO) repository, under accession number
-GSE63514, was used.</p>
+GSE63514, was used. It is worth noting that GPL570 refers to the
+Affymetrix Human Genome U133 Plus 2.0 Array: it was the microarray
+platform used for the generation of gene expression data for the data
+set used: GSE63514.</p>
 </div>
 <div id="part-1" class="section level1">
 <h1>PART 1:</h1>
